--- a/res/config/animals/animals.yaml
+++ b/res/config/animals/animals.yaml
@@ -1,5 +1,5 @@
 animals:
-  - type: Wolf
+  - type: entity.Wolf
     weight: 50
     max_count: 30
     speed: 3
@@ -153,7 +153,7 @@ animals:
       Duck: 0
       Caterpillar: 0
       Plant: 100
-  - type: Rabbit
+  - type: entity.Rabbit
     weight: 2
     max_count: 150
     speed: 2
